--- a/static/assets/styles/main.css
+++ b/static/assets/styles/main.css
@@ -122,7 +122,7 @@
 	border-radius: 7px;
 	border: 1px solid #c3d0d8;
 	padding: 1px 8px 5px 3px;
-	color: #4E798D;
+	color: #3B5C68;
 	font-size: 15px;
 	background-color: #DDE8EE;
 }
