Color contrast in beta warning close button

--- a/static/assets/styles/main.css
+++ b/static/assets/styles/main.css
@@ -128,7 +128,7 @@
 }
 #close-beta-warning {
 	font-size: 90%;
-	border: 1px solid #4E798D;
+	border: 1px solid #3b5c68;
 	border-radius: 5px;
 	padding: 2px 10px;
 	cursor: pointer;
