--- a/static/assets/styles/main.css
+++ b/static/assets/styles/main.css
@@ -1852,7 +1852,7 @@ input::-webkit-inner-spin-button {
 .timeline-years .years .year .year-text {
 	min-width: 35px;
 	font-size: 13px;
-	color: #000000aa;
+	color: #000000;
 }
 .timeline-years .years .year .year-orient {
 	position: absolute;
